--- a/.github/workflows/validate-slash_commands.yml
+++ b/.github/workflows/validate-slash_commands.yml
@@ -10,4 +10,4 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Validate JSON files
-      run: node ../scripts/validate-slash_commands.js ./slash_commands
+      run: node .github/scripts/validate-slash_commands.js ./slash_commands
