--- a/.github/workflows/validate-slash_commands.yml
+++ b/.github/workflows/validate-slash_commands.yml
@@ -3,7 +3,7 @@ name: Slash command validation
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  validate-json:
+  validate-slash-commands:
     runs-on: ubuntu-latest
 
     steps:
