--- a/.github/workflows/language-comparison.yml
+++ b/.github/workflows/language-comparison.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Validate Slash Command files
+    - name: Compare language files
       run: node .github/scripts/compare-languages.js
