--- a/.github/workflows/validate-commands.yml
+++ b/.github/workflows/validate-commands.yml
@@ -1,6 +1,11 @@
 name: File validation
 
-on: [push, pull_request, workflow_dispatch]
+on: 
+  push:
+    branches:
+      - '!weblate'
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   validate-json:
