--- a/.github/workflows/validate-commands.yml
+++ b/.github/workflows/validate-commands.yml
@@ -2,8 +2,8 @@ name: File validation
 
 on: 
   push:
-    branches:
-      - '!weblate'
+    branches-ignore:
+      - weblate
   pull_request:
   workflow_dispatch:
 
