--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "exports": {
+    ".": "./index.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/quark-bot-discord/languages.git"
