--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
-    ".": "./index.ts"
+    ".": "./dist/index.js"
   },
   "repository": {
     "type": "git",
