--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/quark-bot-discord/languages.git"
