--- a/.github/workflows/generate-typings.yml
+++ b/.github/workflows/generate-typings.yml
@@ -14,3 +14,22 @@ jobs:
 
     - name: Generate typings
       run: node .github/scripts/generate-typings.js
+
+    - name: Compile TypeScript
+      run: npm run build
+
+    - name: Import bot's GPG key for signing commits
+      id: import-gpg
+      uses: crazy-max/ghaction-import-gpg@v4
+      with:
+        gpg_private_key: ${{ secrets.BOT_GPG_PRIVATE_KEY }}
+        git_config_global: true
+        git_user_signingkey: true
+        git_commit_gpgsign: true
+
+    - name: Commit changes
+      uses: EndBug/add-and-commit@v9
+      with:
+        add: '[".github/scripts", "dist"]'
+        committer_email: automations@quark.bot
+        committer_name: Quark Automations
