--- a/.github/workflows/generate-typings.yml
+++ b/.github/workflows/generate-typings.yml
@@ -12,8 +12,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Generate typings
-      run: node .github/scripts/generate-typings.js
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+
+    - name: Install dependencies
+      run: npm ci
 
     - name: Compile TypeScript
       run: npm run build
