--- a/.github/workflows/validate-commands.yml
+++ b/.github/workflows/validate-commands.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+
+    - name: Install dependencies
+      run: npm ci
+
     - name: Validate all JSON files
       run: node .github/scripts/validate-json.js
 
