--- a/.github/workflows/validate-commands.yml
+++ b/.github/workflows/validate-commands.yml
@@ -31,5 +31,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Compile TypeScript
+      run: npm run build
+
     - name: Validate Slash Command files
-      run: npm run build && node .github/scripts/validate-slash_commands.js
+      run: node .github/scripts/validate-slash_commands.js
