--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
+    "@types": {
+      "types": "./languages.d.ts"
+    },
     ".": {
       "import": "./dist/index.js",
       "require": "./dist/index.js",
