Add GitHub Actions workflow for publishing private package and update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "languages",
+  "name": "@quark-bot-discord/languages",
   "version": "1.0.0",
   "description": "Languages for Quark",
   "main": "index.js",
